@@ -1,5 +1,4 @@
 - extend probing system to be more compatible with other distros/OS's
 - define a release procedure and document it in the dummy release files in doc/
 - fix bugs?
-- add icon that is clearer?
-- add a more extensive pluggable setup? 
+- add a more extensive pluggable setup?
